<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/et_filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:layout_weight="2"
                android:padding="10dp"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:minLines="1"
                android:lines="1"
                android:imeOptions="actionDone"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="16dp"
                android:text="20170000_000000"/>

            <Button
                android:id="@+id/btn_edit_log_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="2dp"
                android:layout_marginEnd="10dp"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:background="@color/status_box_color"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/started"/>

            <TextView
                android:id="@+id/tv_started_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="2017/11/15 12:00:29"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/tv_duration_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="00:00:29"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/stopped"/>

            <TextView
                android:id="@+id/tv_stopped_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="2017/11/15 12:00:32"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/data_points"/>

            <TextView
                android:id="@+id/tv_data_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="4"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/speed"/>

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end|center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="0"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/status_box_color" />

        <Button
            android:id="@+id/btn_delete_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/delete_from_skypro"
            android:textAllCaps="false"
            android:background="@drawable/btn_roundrect_selector"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_share_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/share"
            android:textAllCaps="false"
            android:background="@drawable/btn_roundrect_selector"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>